se arreglar issues notificados por sonar cloud